--- a/_config.yml
+++ b/_config.yml
@@ -29,29 +29,29 @@ author:
   location         : "Tehran"
   employer         : "Tehran University of Medical Sciences"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "a.m.vahdani@gmail.com" 
 
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=Z3xTClQAAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-6196-1329"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=%28%28Vahdani%2C+Amir%5BAuthor%5D%29+OR%28Amir+M.+Vahdani%5BAuthor%5D%29%29+OR+%28Amir+Mohammad+Vahdani%5BAuthor%5D%29&sort=relevance"
+  researchgate     : "https://www.researchgate.net/profile/Amir-Vahdani"
   scopus           : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "https://github.com/AmirV97"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
