--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : ""
 title_separator          : "-"
 name                     : &name "Amir M. Vahdani"
 description              : &description "MD"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://amirv97.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Amir M. Vahdani"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Researcher"
   location         : "Tehran"
   employer         : "Tehran University of Medical Sciences"
   uri              : # URL
