--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,13 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "default"
-title                    : ""
+title                    : "Amir M. Vahdani"
 title_separator          : "-"
 name                     : &name "Amir M. Vahdani"
 description              : &description "MD"
 url                      : https://amirv97.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "AmirV97/amirv97.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -25,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "Amir M. Vahdani"
   pronouns         : # example: "she/her"  
-  bio              : "Researcher"
+  bio              : "Medical researcher | ML developer"
   location         : "Tehran"
-  employer         : "Tehran University of Medical Sciences"
+  employer         : "Freelance"
   uri              : # URL
   email            : "a.m.vahdani@gmail.com" 
 
@@ -259,23 +258,23 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
-  - scope:
-      path: ""
-      type: portfolio
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comment: true
-  # _talks
-  - scope:
-      path: ""
-      type: talks
-    values:
-      layout: talk
-      author_profile: true
-      share: true
+  # # _portfolio
+  # - scope:
+  #     path: ""
+  #     type: portfolio
+  #   values:
+  #     layout: single
+  #     author_profile: true
+  #     share: true
+  #     comment: true
+  # # _talks
+  # - scope:
+  #     path: ""
+  #     type: talks
+  #   values:
+  #     layout: talk
+  #     author_profile: true
+  #     share: true
 
 
 # Sass/SCSS
